welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:22: error: ':' expected but ')' found.
def decalage(n):Array[Color]={
              ^Array2:45: error: identifier expected but '}' found.
}
^